<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Swift"
    android:background="@drawable/background24">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar_swift"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true">

            <ViewFlipper
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/view_flipper"/>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_swift"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin"/>


        </com.google.android.material.appbar.CollapsingToolbarLayout>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_swift"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            app:cardElevation="5dp"
            app:cardCornerRadius="8dp"
            android:backgroundTint="@color/cardColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="18dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/car_features"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/mileage"
                            android:textColor="@color/textColor"
                            android:textSize="18sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fuel_type"
                            android:textColor="@color/textColor"
                            android:textSize="18sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/engine"
                            android:textColor="@color/textColor"
                            android:textSize="18sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/number_of_seats"
                            android:textColor="@color/textColor"
                            android:textSize="18sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/fuel_economy"
                            android:textColor="@color/textColor"
                            android:textSize="18sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/air_condition"
                            android:textColor="@color/textColor"
                            android:textSize="18sp"
                            />



                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="100dp"
                        >

                        <LinearLayout
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/swift"
                                android:textColor="@color/textColor"
                                android:textSize="18sp"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/swift"
                                android:textColor="@color/textColor"
                                android:textSize="18sp"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/swift"
                                android:textColor="@color/textColor"
                                android:textSize="18sp"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/swift"
                                android:textColor="@color/textColor"
                                android:textSize="18sp"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/swift"
                                android:textColor="@color/textColor"
                                android:textSize="18sp"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/swift"
                                android:textColor="@color/textColor"
                                android:textSize="18sp"
                                />

                        </LinearLayout>


                    </RelativeLayout>


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/booking_price"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorAccent"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hourly_price"
                            android:textColor="@color/textColor"
                            android:textSize="18sp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/daily_price"
                            android:textColor="@color/textColor"
                            android:textSize="18sp"
                            />


                    </LinearLayout>

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="140dp"
                        >

                        <LinearLayout
                            android:layout_marginTop="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/swift"
                                android:textColor="@color/textColor"
                                android:textSize="18sp"
                                />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/swift"
                                android:textColor="@color/textColor"
                                android:textSize="18sp"
                                />


                        </LinearLayout>


                    </RelativeLayout>


                </LinearLayout>

                <Button
                    android:layout_marginTop="40dp"
                    android:id="@+id/bookNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button1"
                    android:text="@string/book_now"
                    android:textStyle="bold"
                    android:elevation="8dp"
                    android:textSize="23sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:padding="16dp"
                    android:clickable="true"
                    />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>