<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    tools:context=".SignIn"
    android:background="@drawable/background9">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="250dp">


            <EditText
                android:id="@+id/email"
                android:paddingLeft="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:background="@drawable/textbox"
                android:drawablePadding="20dp"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="19sp"
                android:drawableLeft="@drawable/email"
                android:hint="@string/email"
                android:maxLines="1"
                android:layout_marginTop="10dp"
                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

            <EditText
                android:paddingLeft="25dp"
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/lock"
                android:textColorHint="@color/colorPrimaryDark"
                android:textSize="19sp"
                android:drawablePadding="25dp"
                android:hint="@string/password"
                android:ems="10"
                android:background="@drawable/textbox"
                android:maxLines="1"
                android:layout_marginTop="10dp"
                />

            <Button
                android:id="@+id/log_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button1"
                android:elevation="8dp"
                android:text="@string/sign_in"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="23sp"
                android:padding="16dp"
                android:clickable="true"
                android:layout_marginTop="30dp"
                />

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button1"
                android:text="Register"
                android:elevation="8dp"
                android:textSize="23sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:padding="16dp"
                android:clickable="true"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_your_password"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:textColor="#A8B9E1"
                android:padding="16dp"
                android:clickable="true"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>